infrastructure/kubernetes/overlays/stage/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amuse-api
  namespace: amuse
spec:
  replicas: 2
